<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.dnowakowski.transformers.data.model.Transformer.Type"/>
        <variable
            name="viewModel"
            type="com.dnowakowski.transformers.main.transformersTab.addDialog.AddTransformerDialogViewModel"
            />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="350dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/image"
            android:src="@{viewModel.type==Type.AUTOBOT ? @drawable/autobot : @drawable/decepticon}"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_name"
                android:inputType="text"
                android:text="@={viewModel.name}"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/strengthWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <EditText
                android:id="@+id/strength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_strength"
                android:inputType="number"
                android:text="@={viewModel.strength}"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/intelligenceWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <EditText
                android:id="@+id/intelligence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_intelligence"
                android:inputType="number"
                android:text="@={viewModel.intelligence}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/speedWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strengthWrapper">

            <EditText
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_speed"
                android:inputType="number"
                android:text="@={viewModel.speed}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/enduranceWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/intelligenceWrapper">

            <EditText
                android:id="@+id/endurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_endurance"
                android:inputType="number"
                android:text="@={viewModel.endurance}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rankWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speedWrapper">

            <EditText
                android:id="@+id/rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_rank"
                android:inputType="number"
                android:text="@={viewModel.rank}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/courageWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/enduranceWrapper">

            <EditText
                android:id="@+id/courage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_courage"
                android:inputType="number"
                android:text="@={viewModel.courage}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firepowerWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/rankWrapper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rankWrapper">

            <EditText
                android:id="@+id/firepower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_firepower"
                android:inputType="number"
                android:text="@={viewModel.firepower}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/skillWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/courageWrapper">

            <EditText
                android:id="@+id/skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_skill"
                android:inputType="number"
                android:text="@={viewModel.skill}" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/skillWrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameWrapper" />

        <Button
            android:id="@+id/add_button"
            android:onClick="@{ ()-> viewModel.onSaveTransformer()}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firepowerWrapper" />


    </android.support.constraint.ConstraintLayout>
</layout>